Fixed padding, speech bubble clipping, and removed background from title annotations

--- a/AnnotationRenderer.css
+++ b/AnnotationRenderer.css
@@ -75,3 +75,7 @@
 	border: 1px solid rgba(255, 255, 255, 0.50);
 	background-color: transparent;
 }
+
+.__cxt-ar-annotation__ svg {
+	pointer-events: all;
+}
